# torcc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
demo/: blur.c  fibo.c  masterslave.c  matmul.c  mbench1.c  mergesort.c  primes.c
include/: torcc.h  torcc_base.h  torcc_config.h  torcc_internal.h  torcc_mpi_internal.h  torcc_queue.h  util.h
src/: torcc.cpp  torcc_comm.cpp  torcc_queue.cpp  torcc_runtime.cpp  torcc_server.cpp  torcc_thread.cpp
